test/resources/valid/ValidNumberArray.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    array myNumberArray = [1, 2, 3];
    STUB_ACTION >> myNumberArray;
}